@ Fix web portal pages getting cut off on mobile browsers. @

--- a/Applications/WebPortal/WebApp/resources/index.css
+++ b/Applications/WebPortal/WebApp/resources/index.css
@@ -34,5 +34,5 @@
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100vh;
+  height: 100dvh;
 }
